Minor css fix in converter! and sidebar and body! fixed vertical and horizontal overflow!

--- a/src/components/CurrencyConverter/CurrencyConverter.css
+++ b/src/components/CurrencyConverter/CurrencyConverter.css
@@ -2,6 +2,7 @@
 
 @media only screen and (min-width:640px){
 .converter_container{
+  margin-top: 10px;
   width: 600px;
   border: 0.7px solid #979797;
   padding: 16px ;
@@ -74,6 +75,7 @@
 }
 @media only screen and (max-width:640px){
   .converter_container{
+    margin-top: 10px;
     width: 90%;
     height: 40%;
     max-height: 250px ;
@@ -149,12 +151,13 @@
 }
 @media only screen and (max-width:400px) {
   .converter_container{
+    margin-top: 10px;
     width: 90%;
     height: 40%;
-    max-width: 270px;
+    max-width: 290px;
     max-height: 250px ;
     border: 1px solid #979797;
-    padding: 10px;
+    padding: 10px 6px 10px 6px;
     border-radius: 12px;
   }
   .converter_heading{
