--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@
   height: 100vh;
   background-color: #f5f5f5;
   padding-left: 50px;
-  padding-top: 10px;
   justify-content: center;
   }
 }
@@ -23,6 +22,5 @@
   height: 100vh;
   background-color: #f5f5f5;
   padding-left: 10px;
-  padding: 10px;
 }
 }
